ref: jwt 수정